--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "camera-controls": "^1.37.4",
     "offset": "^0.0.1",
     "three": "^0.148.0",
+    "vite-plugin-static-copy": "^3.1.2",
     "yarn": "^1.22.22",
     "zoomtastic": "^2.2.1"
   },
