--- a/maolegemao/package.json
+++ b/maolegemao/package.json
@@ -20,7 +20,7 @@
     "@types/lodash": "^4.14.185",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue": "3.2.0",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -31,7 +31,7 @@
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7",
+    "vite": "^7.1.3",
     "vue-tsc": "^0.39.5"
   }
 }
