--- a/maolegemao/package.json
+++ b/maolegemao/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "yarn install && vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "vite": "^3.0.0",
     "@types/lodash": "^4.14.185",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -31,7 +32,6 @@
     "eslint-plugin-vue": "^8.7.1",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
-    "vite": "^7.1.3",
     "vue-tsc": "^0.39.5"
   }
 }
