--- a/maolegemao/package.json
+++ b/maolegemao/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "yarn install && vue-tsc --noEmit && vite build",
+    "build": "yarn install && npm install -D @vitejs/plugin-vue@3.2.0 && vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
