--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "build:web": "vite build --config vite.web.config.js",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "build-deploy": "vite build && npm run deploy"
   },
   "dependencies": {
     "camera-controls": "^1.37.4",
