--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zoomtastic": "^2.2.1"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "less": "^4.1.3",
     "terser": "^5.16.5",
     "vite": "^4.0.0",
